tests/out/error/redef/const.in.bt
const foo := 123
const foo := 'foo'
